--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -1,7 +1,8 @@
 ---
 title: Introduction to options
 description: Available options for building with Qiskit Runtime primitives
-
+in_page_toc_min_heading_level: 2
+in_page_toc_max_heading_level: 2
 ---
 
 # Introduction to options
@@ -51,109 +52,850 @@ Options can be defined before a primitive is constructed and passed to the primi
 </Tabs>
 
 <span id="options-table"></span>
-### Available options
+## Available options
 
 The following table documents options from the latest version of `qiskit-ibm-runtime`. To see older option versions, visit the [`qiskit-ibm-runtime` API reference](/docs/api/qiskit-ibm-runtime) and select a previous version.
 
-<Admonition type="caution" title="Important">
-Scroll to see the full table.
-</Admonition>
-
 <Tabs>
   <TabItem value="Estimator" label="Estimator">
-| Option               | Sub-option               | Sub-sub-option          | Choices                                                                                   | Default                   | Option               |
-|----------------------|--------------------------|-------------------------|-------------------------------------------------------------------------------------------|---------------------------|----------------------|
-| [default_shots](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_shots)        |                          |         | Integer >= 0| None           | default_shots        |
-| [default_precision](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_precision)    |                          |                     |  float > 0     | `0.015625 (1 / sqrt(4096))`     | default_precision    |
-| [dynamical_decoupling](/docs/api/qiskit-ibm-runtime/options-dynamical-decoupling-options) |                          |                         |              |                     | dynamical_decoupling |
-|                      | enable                   |                         | `True`/`False`                                                             |    `False`           |                      |
-|                      | extra_slack_distribution |                         | `middle`/`edges`                                                                  | `middle`                  |                      |
-|                      | scheduling_method        |                         | `asap`/`alap`                                                                      | `alap`                    |                      |
-|                      | sequence_type            |                         | `XX`/`XpXm`/`XY4`                                                         | `XX`                      |                      |
-|                      | skip_reset_qubits       |                         | `True`/`False`                                                                                   | `False`                 |                    |
-| [environment](/docs/api/qiskit-ibm-runtime/options-environment-options)          |                          |     |             |                                  | environment          |
-|                      | callback                 |                         |Callable function that receives Job ID and Job result.                             |`None`                           |                      |
-|                      | job_tags                 |                         |List of tags                                                                     |`None`                           |                      |
-|                      | log_level              |                         |`DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                 |`WARNING`                          |                      |
-|                      | private                  |                         |`True`/`False`                                                                      |`False`                           |                      |
-| [execution](/docs/api/qiskit-ibm-runtime/options-execution-options-v2)            |                          |                         |               |                           | execution            |
-|                      | init_qubits              |                         | `True`/`False`                                                                         | `True`                    |                      |
-|                      | rep_delay                |                         | Value in the range supplied by `backend.rep_delay_range`.       | Given by `backend.default_rep_delay`.|                      |
-| [max_execution_time](/docs/api/qiskit-ibm-runtime/options-estimator-options#max_execution_time)   |                          |       | Integer number of seconds in the range  [1, 10800]    | `10800` (3 hours)   | max_execution_time   |
-| [resilience](/docs/api/qiskit-ibm-runtime/options-resilience-options-v2)           |                          |      |                               |                      | resilience    |
-|                      | [layer_noise_learning](/docs/api/qiskit-ibm-runtime/options-layer-noise-learning-options)     |                         |                    |                            |      |
-|                      |                          | layer_pair_depths       |  list[int] of 2-10 values in the range [0, 200]                           | `(0, 1, 2, 4, 16, 32)`              |                      |
-|                      |                          | max_layers_to_learn     |  `None`/ Integer >= 1                                                                      | `4`                    |                      |
-|                      |                          | num_randomizations      |   Integer >= 1                                                                            |  `32`                    |                      |
-|                      |                          | shots_per_randomization |  Integer >= 1                                                                         |  `128`                    |                      |
-|                      | layer_noise_model       |        | `NoiseLearnerResult`/`Sequence[LayerError]`                      | `None`                      |                      |
-|                      | measure_mitigation       |        | `True`/`False`                      | `True`                      |                      |
-|                      | [measure_noise_learning](/docs/api/qiskit-ibm-runtime/options-measure-noise-learning-options)   | num_randomizations      |  Integer >= 1  | `32`                      |                      |
-|                      |                          | shots_per_randomization |  Integer                                                                                | 'auto'                    |                      |
-|                      | pec_mitigation           |                         | `True`/`False`                                                                        | `False`                      |                      |
-|                      | [pec](/docs/api/qiskit-ibm-runtime/options-pec-options)   |             |             |                        |                      |
-|                      |                          | max_overhead            |  `None`/ Integer >1          | `100`                      |                      |
-|                      |                          | noise_gain              |  `auto`/ float in the range `[0, 1]`                                                     | `auto`                    |                      |
-|                      | zne_mitigation  | `True`/`False`                                                                         | `False`                     |                      |
-|                      | [zne](/docs/api/qiskit-ibm-runtime/options-zne-options)   |                    |                                |   |                      |
-|                      |                          | amplifier               | `gate_folding`, `gate_folding_front`, `gate_folding_back, pea`                                | `gate_folding` |                      |
-|                      |                          | extrapolated_noise_factors |         list of floats  |  `[0, *noise_factors]`|                      |
-|                      |                          | extrapolator            | one or more of `exponential`<br />`linear`<br />`double_exponential`<br />`polynomial_degree_(1 <= k <= 7)`<br />`fallback` | (`exponential`, `linear`) |                      |
-|                      |                          | noise_factors           |   list of floats; each float >= 1     | `(1, 1.5, 2)` for PEA, and `(1, 3, 5)` otherwise. |                      |
-| [resilience_level](/docs/api/qiskit-ibm-runtime/options-estimator-options#resilience_level)     |                          |                         | `0`/`1`/`2`    | `1`                         |     resilience_level   |
-| [seed_estimator](/docs/api/qiskit-ibm-runtime/options-estimator-options#seed_estimator)       |                          |                         |  Integer         |     `None`               |   seed_estimator   |
-| [simulator](/docs/api/qiskit-ibm-runtime/options-simulator-options)            |                          |                         |                |                     |   simulator   |
-|                      | basis_gates                                  |                         |  List of basis gate names to unroll to   | The set of all basis gates supported by [Qiskit Aer simulator](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html) |                      |
-|                      | coupling_map             |                         |  List of directed two-qubit interactions                                                | full connectivity     |                      |
-|                      | noise_model              |                         |   [Qiskit Aer NoiseModel](build-noise-models), or its representation        | `None`                      |                      |
-|                      | seed_simulator           |                         |   Integer                                                                               | `None`                    |                      |
-| [twirling](/docs/api/qiskit-ibm-runtime/options-twirling-options)             |                          |                         |             |                       |     twirling     |
-|                      | enable_gates             |                         | `True`/`False`                                                                           | `False`                     |                      |
-|                      | enable_measure           |                         | `True`/`False`                                                                       | `True`                      |                      |
-|                      | num_randomizations       |                         |  `auto`/ Integer >= 1                                                                         | `auto`                    |                      |
-|                      | shots_per_randomization  |                         |   `auto`/ Integer >= 1                                      | `auto`                    |                      |
-|                      | strategy                 |                         | `active`<br />`active-circuit`<br />`active-accum`<br />`all`                                | `active-accum`            |                      |
-| experimental         |                          |                         |                           |                        |                    |
-|                      | execution_path           |                         |           | None                   |                    |
-  </TabItem>
+<details>
+<summary>
+### `default_shots`
+</summary>
 
+The total number of shots to use per circuit per configuration.
+
+**Choices**: Integer >= 0
+**Default**: None
+
+[`default_shots` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_shots)
+</details>
+
+<details>
+<summary>
+### `default_precision`
+</summary>
+
+The default precision to use for any PUB or `run()` call that does not specify one.
+
+**Choices**: Float > 0
+**Default**: 0.015625 (1 / sqrt(4096))
+
+[`default_precision` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_precision)
+</details>
+
+<details>
+<summary>
+### `dynamical_decoupling`
+</summary>
+
+Control dynamical decoupling error mitigation settings.
+
+[`dynamical_decoupling` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#dynamical_decoupling)
+<details>
+<summary>
+#### `dynamical_decoupling.enable`
+</summary>
+
+**Choices**: `True`, `False`
+**Default**: `False`
+</details>
+
+<details>
+<summary>
+#### `dynamical_decoupling.extra_slack_distribution`
+</summary>
+
+**Choices**: `middle`, `edges`
+**Default**: `middle`
+</details>
+
+<details>
+<summary>
+#### `dynamical_decoupling.scheduling_method`
+</summary>
+
+Choices: `asap`, `alap`
+Default: `alap`
+</details>
+
+<details>
+<summary>
+#### `dynamical_decoupling.sequence_type`
+</summary>
+
+Choices: `XX`, `XpXm`, `XY4`
+Default: `XX`
+</details>
+
+<details>
+<summary>
+#### `dynamical_decoupling.skip_reset_qubits`
+</summary>
+
+Choices: `True`, `False`
+Default: `False`
+</details>
+
+</details>
+
+
+<details>
+<summary>
+### `environment`
+</summary>
+
+[`environment` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#environment)
+<details>
+<summary>
+#### `environment.callback`
+</summary>
+
+Callable function that receives the `Job ID` and `Job result`.
+
+**Choices**: None
+**Default**: None
+</details>
+
+<details>
+<summary>
+#### `environment.job_tags`
+</summary>
+
+List of tags.
+
+**Choices**: None
+**Default**: None
+</details>
+
+<details>
+<summary>
+#### `environment.log_level`
+</summary>
+
+**Choices**: DEBUG, INFO, WARNING, ERROR, CRITICAL
+**Default**: WARNING
+</details>
+
+<details>
+<summary>
+#### `environment.private`
+</summary>
+
+**Choices**: `True`, `False`
+**Default**: `False`
+</details>
+
+</details>
+
+
+<details>
+<summary>
+### `execution`
+</summary>
+
+[`execution` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#execution)
+<details>
+<summary>
+#### `execution.init_qubits`
+</summary>
+Whether to reset the qubits to the ground state for each shot.
+
+**Choices**: `True`, `False`
+**Default**: `True`
+</details>
+
+<details>
+<summary>
+#### `execution.rep_delay`
+</summary>
+The delay between a measurement and the subsequent quantum circuit.
+
+**Choices**: Value in the range supplied by `backend.rep_delay_range`
+**Default**: Given by `backend.default_rep_delay`
+</details>
+
+</details>
+
+
+<details>
+<summary>
+### `max_execution_time`
+</summary>
+**Choices**: Integer number of seconds in the range [1, 10800]
+**Default**: 10800 (3 hours)
+
+[`max_execution_time` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#max_execution_time)
+</details>
+
+<details>
+<summary>
+### `resilience`
+</summary>
+Advanced resilience options to fine tune the resilience strategy.
+
+[`resilience` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#resilience)
+<details>
+<summary>
+#### `resilience.layer_noise_learning`
+</summary>
+
+Options for learning layer noise.
+
+[`resilience.layer_noise_learning` API documentation](/docs/api/qiskit-ibm-runtime/options-layer-noise-learning-options)
+</details>
+
+<details>
+<summary>
+##### `resilience.layer_noise_learning.layer_pair_depths`
+</summary>
+
+**Choices**: list[int] of 2-10 values in the range [0, 200]
+**Default**: `(0, 1, 2, 4, 16, 32)`
+
+</details>
+
+<details>
+<summary>
+##### `resilience.layer_noise_learning.max_layers_to_learn`
+</summary>
+
+**Choices**: None, Integer >= 1
+**Default**: `4`
+
+</details>
+
+<details>
+<summary>
+##### `resilience.layer_noise_learning.num_randomizations`
+</summary>
+
+**Choices**: Integer >= 1
+**Default**: `32`
+
+</details>
+
+<details>
+<summary>
+##### `resilience.layer_noise_learning.shots_per_randomization`
+</summary>
+
+**Choices**: Integer >= 1
+**Default**: `128`
+
+</details>
+
+<details>
+<summary>
+#### `resilience.layer_noise_model`
+</summary>
+
+**Choices**: `NoiseLearnerResult`, `Sequence[LayerError]`
+**Default**: None
+
+</details>
+
+<details>
+<summary>
+#### `resilience.measure_mitigation`
+</summary>
+
+**Choices**: `True`, `False`
+**Default**: `True`
+
+</details>
+
+<details>
+<summary>
+#### `resilience.measure_noise_learning`
+</summary>
+
+Options for measurement noise learning.
+
+[`resilience.measure_noise_learning` API documentation](/docs/api/qiskit-ibm-runtime/options-measure-noise-learning-options)
+</details>
+
+<details>
+<summary>
+##### `resilience.measure_noise_learning.num_randomizations`
+</summary>
+
+**Choices**: Integer >= 1
+**Default**: `32`
+
+</details>
+
+<details>
+<summary>
+##### `resilience.measure_noise_learning.shots_per_randomization`
+</summary>
+
+**Choices**: Integer, `auto`
+**Default**: `auto`
+
+</details>
+
+<details>
+<summary>
+#### `resilience.measure_noise_learning.pec_mitigation`
+</summary>
+
+**Choices**: `True`, `False`
+**Default**: `False`
+
+</details>
+
+<details>
+<summary>
+#### `resilience.measure_noise_learning.pec`
+</summary>
+
+Probabilistic error cancellation mitigation options.
+
+[`resilience.measure_noise_learning.pec` API documentation](/docs/api/qiskit-ibm-runtime/options-pec-options)
+</details>
+
+<details>
+<summary>
+##### `resilience.measure_noise_learning.pec.max_overhead`
+</summary>
+
+**Choices**: `None`, Integer >= 1
+**Default**: `100`
+
+</details>
+
+<details>
+<summary>
+##### `resilience.measure_noise_learning.pec.max_overhead`
+</summary>
+
+**Choices**: `None`, Integer >= 1
+**Default**: `100`
+
+</details>
+
+<details>
+<summary>
+##### `resilience.measure_noise_learning.pec.noise_gain`
+</summary>
+
+**Choices**: `auto`, float in the range [0, 1]
+**Default**: `auto`
+
+</details>
+
+<details>
+<summary>
+#### `resilience.measure_noise_learning.zne_mitigation`
+</summary>
+
+**Choices**: `True`, `False`
+**Default**: `False`
+
+</details>
+
+<details>
+<summary>
+#### `resilience.measure_noise_learning.zne`
+</summary>
+
+**Choices**: `True`, `False`
+**Default**: `False`
+
+[`resilience.measure_noise_learning.zne` API documentation](/docs/api/qiskit-ibm-runtime/options-zne-options)
+</details>
+
+<details>
+<summary>
+##### `resilience.measure_noise_learning.zne.amplifier`
+</summary>
+
+**Choices**: `gate_folding`, `gate_folding_front`, `gate_folding_back`, `pea`
+**Default**: `gate_folding`
+
+</details>
+<details>
+<summary>
+##### `resilience.measure_noise_learning.zne.extrapolated_noise_factors`
+</summary>
+
+**Choices**: List of floats
+**Default**: `[0, *noise_factors]`
+
+</details>
+
+<details>
+<summary>
+##### `resilience.measure_noise_learning.zne.extrapolator`
+</summary>
+
+**Choices**: One or more of: `exponential`, `linear`, `double_exponential`, `polynomial_degree_(1 <= k <= 7)`, `fallback`
+**Default**: `(exponential, linear)`
+
+</details>
+
+<details>
+<summary>
+##### `resilience.measure_noise_learning.zne.noise_factors`
+</summary>
+
+**Choices**: List of floats; each float >= 1
+**Default**: `(1, 1.5, 2)` for `PEA`, and `(1, 3, 5)` otherwise
+
+</details>
+
+</details>
+
+
+<details>
+<summary>
+### `resilience_level`
+</summary>
+
+How much resilience to build against errors. Higher levels generate more accurate results at the expense of longer processing times.
+
+**Choices**: `0`, `1`, `2`
+**Default**: `1`
+
+[`resilience_level` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#resilience_level)
+</details>
+
+<details>
+<summary>
+### `seed_estimator`
+</summary>
+
+**Choices**: Integer
+**Default**: None
+
+[`seed_estimator`](/docs/api/qiskit-ibm-runtime/options-estimator-options#seed_estimator)
+</details>
+<details>
+<summary>
+### `simulator`
+</summary>
+
+Options to pass when simulating a backend
+
+[`simulator` API documentation](/docs/api/qiskit-ibm-runtime/options-simulator-options)
+<details>
+<summary>
+#### `simulator.basis_gates`
+</summary>
+
+**Choices**: List of basis gate names to unroll to
+**Default**: The set of all basis gates supported by [Qiskit Aer simulator](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html)
+
+</details>
+
+<details>
+<summary>
+#### `simulator.coupling_map`
+</summary>
+
+**Choices**: List of directed two-qubit interactions
+**Default**: Full connectivity
+
+</details>
+
+<details>
+<summary>
+#### `simulator.noise_model`
+</summary>
+
+**Choices**: [Qiskit Aer NoiseModel](/docs/guides/build-noise-models), or its representation
+**Default**: None
+
+</details>
+
+<details>
+<summary>
+#### `simulator.seed_simulator`
+</summary>
+
+**Choices**: Integer
+**Default**: None
+
+</details>
+
+</details>
+
+
+<details>
+<summary>
+### `twirling`
+</summary>
+
+Twirling options
+
+[`twirling` API documentation](/docs/api/qiskit-ibm-runtime/options-twirling-options)
+<details>
+<summary>
+#### `twirling.enable_gates`
+</summary>
+
+**Choices**: True, False
+**Default**: False
+
+</details>
+
+<details>
+<summary>
+#### `twirling.enable_measure`
+</summary>
+
+**Choices**: True, False
+**Default**: True
+
+</details>
+
+<details>
+<summary>
+#### `twirling.num_randomizations`
+</summary>
+
+**Choices**: `auto`, Integer >= 1
+**Default**: `auto`
+
+</details>
+
+<details>
+<summary>
+#### `twirling.shots_per_randomization`
+</summary>
+
+**Choices**: `auto`, Integer >= 1
+**Default**: `auto`
+
+</details>
+
+<details>
+<summary>
+#### `twirling.strategy`
+</summary>
+
+**Choices**: `active`, `active-circuit`, `active-accum`, `all`
+**Default**: `active-accum`
+
+</details>
+
+</details>
+
+
+<details>
+<summary>
+### `experimental`
+</summary>
+
+Experimental options, when available.
+<details>
+<summary>
+#### `experimental.execution_path`
+
+**Choices**: `active`, `active-circuit`, `active-accum`, `all`
+**Default**: None
+
+</summary>
+</details>
+
+</details>
+
+
+
+  </TabItem>
   <TabItem value="Sampler" label="Sampler">
-| Option                                                                                                  | Sub-option               | Choices                                                            | Default                                                                                                                                | Option               |
-|---------------------------------------------------------------------------------------------------------|--------------------------|--------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------|----------------------|
-| [default_shots](/docs/api/qiskit-ibm-runtime/options-sampler-options#default_shots)                    |                          | Integer >= 0                       | `4096`                                                                                                                                 | default_shots        |
-| [dynamical_decoupling](/docs/api/qiskit-ibm-runtime/options-dynamical-decoupling-options) |                          |                                                                    |                                                                                                                                        | dynamical_decoupling |
-|                                                                                                         | enable                   | `True`/`False`                                                     | `False`                                                                                                                                |                      |
-|                                                                                                         | sequence_type            | `XX`/`XpXm`/`XY4`                                                  | `XX`                                                                                                                                   |                      |
-|                                                                                                         | extra_slack_distribution | `middle`/`edges`                                                   | `middle`                                                                                                                               |                      |
-|                                                                                                         | scheduling_method        | `asap`/`alap`                                                      | `alap`                                                                                                                                 |                      |
-|                                                                                                         | skip_reset_qubits        | `True`/`False`                                                     | `False`                                                                                                                                |                      |
-| [environment](/docs/api/qiskit-ibm-runtime/options-environment-options)                  |                          |                                                                    |                                                                                                                                        |                      |
-|                                                                                                         | log_level                | `DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                        | `WARNING`                                                                                                                              | environment          |
-|                                                                                                         | callback                 | Callable function that receives Job ID and Job result.             | `None`                                                                                                                                 |                      |
-|                                                                                                         | job_tags                 | List of tags                                                       | `None`                                                                                                                                 |                      |
-|                                                                                                         | private                  | `True`/`False`                                                     | `False`                                                                                                                                |                      |
-| [execution](/docs/api/qiskit-ibm-runtime/options-execution-options-v2)                    |                          |                                                                    |                                                                                                                                        |                      |
-|                                                                                                         | init_qubits              | `True`/`False`                                                     | `True`                                                                                                                                 | execution            |
-|                                                                                                         | meas_type                | `classified`/`kerneled`/`avg_kerneled`                             | `classified`                                                                                                                           |                      |
-|                                                                                                         | rep_delay                | Value in the range supplied by `backend.rep_delay_range`.          | Given by `backend.default_rep_delay`.                                                                                                  |                      |
-| [max_execution_time](/docs/api/qiskit-ibm-runtime/options-sampler-options#max_execution_time)               |                          | Integer number of seconds in the range  [1, 10800]                 | `10800` (3 hours)                                                                                                                      |                      |
-| [simulator](/docs/api/qiskit-ibm-runtime/options-simulator-options)                      |                          |                                                                    |                                                                                                                                        | max_execution_time   |
-|                                                                                                         | noise_model              | [Qiskit Aer NoiseModel](build-noise-models), or its representation | `None`                                                                                                                                 | simulator            |
-|                                                                                                         | seed_simulator           | Integer                                                            | `None`                                                                                                                                 |                      |
-|                                                                                                         | coupling_map             | List of directed two-qubit interactions                            | full connectivity                                                                                                                      |                      |
-|                                                                                                         | basis_gates              | List of basis gate names to unroll to                              | The set of all basis gates supported by [Qiskit Aer simulator](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html) |                      |
-| [twirling](/docs/api/qiskit-ibm-runtime/options-twirling-options)                        |                          |                                                                    |                                                                                                                                        |                      |
-|                                                                                                         | enable_gates             | `True`/`False`                                                     | `False`                                                                                                                                | twirling             |
-|                                                                                                         | enable_measure           | `True`/`False`                                                     | `True`                                                                                                                                 |                      |
-|                                                                                                         | num_randomizations       | `auto`/ Integer >= 1                                               | `auto`                                                                                                                                 |                      |
-|                                                                                                         | shots_per_randomization  | `auto`/ Integer >= 1                | `auto`                                                                                                                                 |                      |
-|                                                                                                         | strategy                 | `active`<br />`active-circuit`<br />`active-accum`<br />`all`      | `active-accum`                                                                                                                         |                      |
-| experimental                                                                                            |                          |                                                                    |                                                                                                                                        |                      |
+  <details>
+<summary>
+### `default_shots`
+</summary>
+
+The total number of shots to use per circuit per configuration.
+
+**Choices**: Integer >= 0
+**Default**: None
+
+[`default_shots` API documentation](/docs/api/qiskit-ibm-runtime/options-sampler-options#default_shots)
+</details>
+
+<details>
+<summary>
+### `dynamical_decoupling`
+</summary>
+
+Control dynamical decoupling error mitigation settings.
+
+[`dynamical_decoupling` API documentation](/docs/api/qiskit-ibm-runtime/options-sampler-options#dynamical_decoupling)
+<details>
+<summary>
+#### `dynamical_decoupling.enable`
+</summary>
+
+**Choices**: `True`, `False`
+**Default**: `False`
+</details>
+
+<details>
+<summary>
+#### `dynamical_decoupling.extra_slack_distribution`
+</summary>
+
+**Choices**: `middle`, `edges`
+**Default**: `middle`
+</details>
+
+<details>
+<summary>
+#### `dynamical_decoupling.scheduling_method`
+</summary>
+
+Choices: `asap`, `alap`
+Default: `alap`
+</details>
+
+<details>
+<summary>
+#### `dynamical_decoupling.sequence_type`
+</summary>
+
+Choices: `XX`, `XpXm`, `XY4`
+Default: `XX`
+</details>
+
+<details>
+<summary>
+#### `dynamical_decoupling.skip_reset_qubits`
+</summary>
+
+Choices: `True`, `False`
+Default: `False`
+</details>
+
+</details>
+
+
+<details>
+<summary>
+### `environment`
+</summary>
+[`environment` API documentation](/docs/api/qiskit-ibm-runtime/options-sampler-options#environment)
+<details>
+<summary>
+#### `environment.callback`
+</summary>
+
+Callable function that receives the `Job ID` and `Job result`.
+
+**Choices**: None
+**Default**: None
+</details>
+
+<details>
+<summary>
+#### `environment.job_tags`
+</summary>
+
+List of tags.
+
+**Choices**: None
+**Default**: None
+</details>
+
+<details>
+<summary>
+#### `environment.log_level`
+</summary>
+
+**Choices**: DEBUG, INFO, WARNING, ERROR, CRITICAL
+**Default**: WARNING
+</details>
+
+<details>
+<summary>
+#### `environment.private`
+</summary>
+
+**Choices**: `True`, `False`
+**Default**: `False`
+</details>
+
+</details>
+
+
+<details>
+<summary>
+### `execution`
+</summary>
+[`execution` API documentation](/docs/api/qiskit-ibm-runtime/options-sampler-options#execution)
+<details>
+<summary>
+#### `execution.init_qubits`
+</summary>
+Whether to reset the qubits to the ground state for each shot.
+
+**Choices**: `True`, `False`
+**Default**: `True`
+</details>
+
+<details>
+<summary>
+#### `execution.rep_delay`
+</summary>
+The delay between a measurement and the subsequent quantum circuit.
+
+**Choices**: Value in the range supplied by `backend.rep_delay_range`
+**Default**: Given by `backend.default_rep_delay`
+</details>
+<details>
+<summary>
+#### `execution.meas_type`
+</summary>
+
+**Choices**: `classified`, `kerneled`, `avg_kerneled`
+**Default**: `classified`
+</details>
+
+</details>
+
+
+<details>
+<summary>
+### `max_execution_time`
+</summary>
+**Choices**: Integer number of seconds in the range [1, 10800]
+**Default**: 10800 (3 hours)
+
+[`max_execution_time` API documentation](/docs/api/qiskit-ibm-runtime/options-sampler-options#max_execution_time)
+</details>
+
+<details>
+<summary>
+### `simulator`
+</summary>
+
+Options to pass when simulating a backend
+
+[`simulator` API documentation](/docs/api/qiskit-ibm-runtime/options-simulator-options)
+<details>
+<summary>
+#### `simulator.basis_gates`
+</summary>
+
+**Choices**: List of basis gate names to unroll to
+**Default**: The set of all basis gates supported by [Qiskit Aer simulator](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html)
+
+</details>
+
+<details>
+<summary>
+#### `simulator.coupling_map`
+</summary>
+
+**Choices**: List of directed two-qubit interactions
+**Default**: Full connectivity
+
+</details>
+
+<details>
+<summary>
+#### `simulator.noise_model`
+</summary>
+
+**Choices**: [Qiskit Aer NoiseModel](/docs/guides/build-noise-models), or its representation
+**Default**: None
+
+</details>
+
+<details>
+<summary>
+#### `simulator.seed_simulator`
+</summary>
+
+**Choices**: Integer
+**Default**: None
+
+</details>
+
+</details>
+
+
+<details>
+<summary>
+### `twirling`
+</summary>
+
+Twirling options
+
+[`twirling` API documentation](/docs/api/qiskit-ibm-runtime/options-twirling-options)
+<details>
+<summary>
+#### `twirling.enable_gates`
+</summary>
+
+**Choices**: True, False
+**Default**: False
+
+</details>
+
+<details>
+<summary>
+#### `twirling.enable_measure`
+</summary>
+
+**Choices**: True, False
+**Default**: True
+
+</details>
+
+<details>
+<summary>
+#### `twirling.num_randomizations`
+</summary>
+
+**Choices**: `auto`, Integer >= 1
+**Default**: `auto`
+
+</details>
+
+<details>
+<summary>
+#### `twirling.shots_per_randomization`
+</summary>
+
+**Choices**: `auto`, Integer >= 1
+**Default**: `auto`
+
+</details>
+
+<details>
+<summary>
+#### `twirling.strategy`
+</summary>
+
+**Choices**: `active`, `active-circuit`, `active-accum`, `all`
+**Default**: `active-accum`
+
+</details>
+
+</details>
+
+
+<details>
+<summary>
+### `experimental`
+</summary>
+
+Experimental options, when available.
+
+</details>
+
+
   </TabItem>
 </Tabs>
 
+
 <span id="options-compatibility-table"></span>
-### Feature compatibility
+## Feature compatibility
 
 Due to differences in the device compilation process, certain runtime features cannot be used together in a single job. Click the appropriate tab for a list of features that are incompatible with the selected feature:
 
